increase sus intro bg size and potential fix for chrome scrollbar interfering with nav menu

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,26 +25,29 @@ html {
   scroll-behavior: smooth;
 }
 
-.scroll-none {
-  overflow-y: hidden;
-}
-
 body {
   color: #fff;
   background-color: var(--950);
   overscroll-behavior: none;
   font-weight: 500;
+  border: none;
   position: relative;
+  overflow-x: hidden;
 }
 
 html[data-scroll='y'],
 html[data-scroll='y'] > body {
-  overflow: auto;
+  overflow-y: scroll;
 }
 
 html[data-scroll='n'],
 html[data-scroll='n'] > body {
-  overflow: hidden;
+  overflow-y: hidden;
+}
+
+html[data-scroll='n'] > body {
+  padding-right: 17px;
+  /* scroll-padding-right: 17px; */
 }
 
 main {
